Preserve sparse config files